--- a/public/css/style.css
+++ b/public/css/style.css
@@ -498,7 +498,7 @@ border: 1px solid transparent; border-radius: 0; font-size: 12px; color: #fff;}
 .btn.red-btn:hover{ background: #f8f8f8; color: #363636;}
 .btn.dark{ background: #333;} 
 .btn.black-btn{ background: #000; color: #fff;}
-.blue-btn{ background: #1c72ce; text-transform: capitalize; font-size: 15px; border-radius: 3px;}
+.blue-btn{ background: darkgoldenrod; text-transform: capitalize; font-size: 15px; border-radius: 3px;}
 .btn.lg{ height: 50px; line-height: 47px; font-size: 14px; min-width: 160px;}
 
 .main-heading-holder{ text-align: center; padding-bottom: 30px;} 
@@ -1767,7 +1767,7 @@ left: 0; width: 100%; visibility: hidden; opacity: 0;}
 .carousel-inner > .item > a > img, .carousel-inner > .item > img{ width: 100%;}
 .header.style-2 .logo{ position: absolute; left: -4px; top: -10px;}
 .banner-layer{ margin: 0 0 0 -100px;}
-.banner-layer img{ position: absolute; top: 10px;}
+.banner-layer img{ position: absolute; top: -120px;}
 
 .add-banners-slider .item img{ width: 100%;} 
 
