superAdmin, registro, invitacion y login

--- a/public/css/register.css
+++ b/public/css/register.css
@@ -1,34 +1,77 @@
-body, html {
-    height: 100%;
+.form-group-register{
+    position: relative;
+    border: 1px solid rgba(0, 0, 0, 0.07);
+    border-radius: 2px;
+    padding-top: 7px;
+    padding-left: 12px;
+    padding-right: 12px;
+    padding-bottom: 4px;
+    overflow: hidden;
+    -webkit-transition: background-color 0.2s ease;
+    transition: background-color 0.2s ease;
+    margin-bottom: 10px;
 }
 
-/*.bg-pic {*/
-    /*background-image: url("http://localhost/dbase/public/images/Riquelme.jpeg");*/
-    /*position:relative;*/
-    /*!* Full height *!*/
-    /*height: 100%;*/
+.form-group-register label{
+    position: absolute;
+    left: 2px;
+    top: 2px;
+    width: 20px;
+    height: 20px;
+}
 
-    /*!* Center and scale the image nicely *!*/
-    /*background-position: center;*/
-    /*background-repeat: no-repeat;*/
-    /*background-size: cover;*/
-/*}*/
+.form-register input{
+    width: 460px;
+    padding: 20px 0;
+    background: transparent;
+    border: 0;
+    border-bottom: 1px solid #b78d21;
+    outline: none;
+    color: white;
+}
+.form-register input::placeholder{
+    color: #b78d21;
+    font-style: oblique;
+    font-weight: bold;
+}
+.container-register{
+    position: absolute;
+    top:-150px;
+    left: 0;
+    right: 0;
+    margin: auto;
+    width: 500px;
+    height: fit-content;
+    border-radius: 5px;
+    background: rgba(3,3,3,0.25);
+    box-shadow: 1px 1px 50px #000;
+}
+.banner-layer-register img{
+    position: absolute;
+    top: -170px;
+    right: 600px;
+    width: 52%;
+}
 .btn-r{
     padding: 0 15px;
     text-transform: uppercase;
     font-weight: bold;
-    height: 42px;
     line-height: 40px;
     border: 1px solid transparent;
     border-radius: 4px;
     font-size: 12px;
     color: #fff;
 }
-.btn-register{
-    background-color:#0d3625;
+.btn-regist{
+    background-color:rgba(13, 54, 37, 0.21);
     border-radius: 4px;
     position:relative;
-    left:20%;
 }
-
-
+.btn-r:focus{
+    outline:none;
+}
+.btn-register{
+    width:460px;
+    margin:20px 0 0;
+    background-color:#162525;
+}
