--- a/public/css/cs-skin-underline.css
+++ b/public/css/cs-skin-underline.css
@@ -56,7 +56,7 @@ div.cs-skin-underline {
 
 .cs-skin-underline ul span {
 	position: relative;
-	text-transform: uppercase;
+	/*text-transform: uppercase;*/
 	font-size: 66%;
 	font-weight: 700;
 	letter-spacing: 1px;
