--- a/public/css/superAdmin.css
+++ b/public/css/superAdmin.css
@@ -6,12 +6,11 @@
 body {
     background: #2E3740;
     color: #435160;
-    font-family: "Open Sans", sans-serif;
+    /*font-family: "Open Sans", sans-serif;*/
 }
 
 h2 {
     color: #6D7781;
-    font-family: "Lucida Sans Unicode ", cursive;
     font-size: 15px;
     font-weight: bold;
     /*font-size: 3.6em;*/
@@ -19,24 +18,12 @@ h2 {
     margin-bottom: 20px;
 }
 
-.inviteForm {
-    width: 350px;
-    position: absolute;
-    top: 10%;
-    left: 70%;
-    margin-left: -175px;
+.saForm {
+    padding:20px;
 }
 
-.leagueForm{
-    width: 350px;
-    position: absolute;
-    top: 10%;
-    right: 70%;
-    margin-left: -175px;
-}
-
-input[type="text"], input[type="password"] {
-    width: 350px;
+input[type="text"]{
+    width: 100%;
     padding: 20px 0px;
     background: transparent;
     border: 0;
@@ -45,7 +32,28 @@ input[type="text"], input[type="password"] {
     color: #6D7781;
     font-size: 16px;
 }
-
+div.cs-skin-underline{
+    font-size: 16px;
+    max-width: 100%;
+}
+.cs-skin-underline > span{
+    padding:20px 0 20px;
+    border-bottom:1px solid #435160;
+    font-size:12px;
+    font-weight: normal;
+}
+.cs-skin-underline > span::after{
+    font-family:'icomoon';
+    content:'\e003';
+}
+.cs-skin-underline .cs-options{
+    background-color:#2E3740;
+    color:#435160;
+}
+.cs-skin-underline ul span::before{
+    background-color:#435160;
+    height:1px;
+}
 label {
     display: block;
     position: absolute;
@@ -63,7 +71,7 @@ label {
 input[type="submit"] {
     background: #1FCE6D;
     border: 0;
-    width: 350px;
+    width: 100%;
     height: 40px;
     border-radius: 3px;
     color: #fff;
@@ -81,5 +89,6 @@ input[type="submit"]:hover {
     color: #435160;
     font-size: 12px;
 }
+
 
 
