--- a/public/css/style.css
+++ b/public/css/style.css
@@ -368,7 +368,7 @@ iframe{ border: 0; width: 100%;}
 
 blockquote{ padding: 0; border: 0;}
 
-label { color: #7f7f7f; display: block; font-weight: 400; margin: 0;}
+label { color: #7f7f7f; font-weight: 400; margin: 0;}
 textarea{ border-radius: 0!important; background: none!important; resize: none;}
 /*textarea,*/
 /*input[type="text"],*/
@@ -400,7 +400,7 @@ textarea {
 }
 input[type="radio"],
 input[type="checkbox"] {
-    margin-top: 1px 0 0;
+    margin-top: 1px;
     line-height: normal;
     cursor: pointer;
     -webkit-box-sizing: border-box;
@@ -487,8 +487,8 @@ h4{ font-size: 16px; font-weight: bold; margin: 0; text-transform: uppercase; te
 background: #202020; color: #fff;}
 h5{ text-transform: uppercase;}
 
-.btn{ padding: 0 15px; text-transform: uppercase; font-weight: bold; height: 42px; line-height: 40px; text-align: center;
-border: 1px solid transparent; border-radius: 0; font-size: 12px; color: #fff;}
+.btn{padding: 0 15px; text-transform: uppercase; font-weight: bold;line-height: 40px; text-align: center;
+border: 1px solid transparent; border-radius: 4px; font-size: 12px; color: #fff;}
 .btn:hover{ color: #fff;}
 .btn i{ margin: 0 8px 0 0;}
 .btn.blank{ border-color: rgba( 255,255,255,0.5);}
