--- a/public/css/style.css
+++ b/public/css/style.css
@@ -78,7 +78,7 @@
     font-size:22px;
     font-weight:600;
     text-align: center;
-    color:#af871f;
+    color:#5F8295;
 
 }
 .panel .panel-heading.separator:after {
