--- a/public/assets/css/SASS/layout.scss
+++ b/public/assets/css/SASS/layout.scss
@@ -1,4 +1,6 @@
 @import 'variables';
+
+body{font-family:"Gill Sans",sans-serif !important}
 /*---CABECERA---*/
 .header-first{
   background-color:$color-principal;
