--- a/public/assets/css/SASS/elementos_herramienta.scss
+++ b/public/assets/css/SASS/elementos_herramienta.scss
@@ -3,10 +3,20 @@
 .icono-accion{
   cursor:pointer;
 }
-.border-secundario{border:1px solid $color-secundario}
+.border-secundario{border:1px solid $light-primary-color}
+
+.btn-principal{
+  background-color:$color-resaltado;
+  color:$texto;
+  &:hover{
+    transform:scale(1.1);
+    background-color:$dark-color-resaltado;
+  }
+}
+
 .btn-clarito{
-  background-color:$color-fondo-clarito;
-  color:$color-principal;
+  background-color:$light-primary-color;
+  color:$texto;
   &[type='submit']:hover {
     transform: scale(1.1);
   }
@@ -18,16 +28,16 @@
 .btn-100{ width:100%; }
 
 .btn-form{
-  color:white;
+  color:$texto;
   font-size:1.2em;
 }
 .btn-cancel{
-  background-color:#c36868;
-  &:hover{background-color:#884a4a}
+  background-color:$cancel-color;
+  &:hover{background-color:$dark-cancel-color}
 }
 .btn-save{
-  background:lightseagreen;
-  &:hover{background-color:#187772}
+  background:$save-color;
+  &:hover{background-color:$dark-save-color}
 }
 
 .group-around{
@@ -43,7 +53,7 @@
 
 /*------- MODAL ----*/
 .modal-title{
-  color:$color-principal;
+  color:$primary-color;
   text-align:center;
   width:100%;
   font-size:1.5em;
@@ -51,14 +61,14 @@
 
 .cuadro-action{
   width:100%;
-  border:1.5px solid $color-principal;
+  border:1.5px solid $dark-primary-color;
   display:flex;
   border-radius:5px;
   margin-bottom:10px;
   justify-content: space-between;
   align-items: baseline;
   input{
-    color:$color-secundario;
+    color:$light-primary-color;
     font-size:1em;
     font-weight:bold;
     text-align:center;
@@ -67,7 +77,7 @@
   }
   i{
     font-size:1.2em;
-    color:$color-principal;
+    color:$primary-color;
     cursor:pointer;
     margin-right:10px;
   }
@@ -79,6 +89,6 @@
   width:100%;
   text-align:center;
   font-size:1.7em;
-  color:$color-principal;
+  color:$primary-color;
   i{cursor:pointer;}
 }
